Suppress illegal access warnings on the JVM